--- a/MyVagon/ViewController/Home/New Schedule/New Schedule Cell/ScheduleDataCell.xib
+++ b/MyVagon/ViewController/Home/New Schedule/New Schedule Cell/ScheduleDataCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -11,18 +11,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="347" id="KGk-i7-Jjw" customClass="ScheduleDataCell" customModule="MyVagon" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="476" height="347"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="363" id="KGk-i7-Jjw" customClass="ScheduleDataCell" customModule="MyVagon" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="540" height="363"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="476" height="347"/>
+                <rect key="frame" x="0.0" y="0.0" width="540" height="363"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aBY-dw-Kxt">
-                        <rect key="frame" x="10" y="10" width="456" height="299"/>
+                        <rect key="frame" x="10" y="10" width="520" height="299"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Truck with trailer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qsx-Z0-Kxq" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                <rect key="frame" x="10" y="10" width="385" height="23"/>
+                                <rect key="frame" x="10" y="10" width="449" height="23"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="23" id="lJA-By-c6V"/>
                                 </constraints>
@@ -39,7 +39,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$500" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9CR-94-3B4" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
-                                <rect key="frame" x="405" y="10" width="41" height="22.5"/>
+                                <rect key="frame" x="469" y="10" width="41" height="22.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -96,7 +96,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="63V-dw-Av4">
-                                <rect key="frame" x="10" y="124" width="436" height="120"/>
+                                <rect key="frame" x="10" y="124" width="500" height="120"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="120" id="7bT-av-B9j"/>
@@ -122,13 +122,13 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KJe-jU-uR7">
-                                <rect key="frame" x="226" y="73" width="230" height="0.0"/>
+                                <rect key="frame" x="226" y="73" width="294" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" red="0.83529411764705885" green="0.41176470588235292" blue="0.41176470588235292" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RG8-I2-gPy">
-                                <rect key="frame" x="353" y="38" width="103" height="30"/>
+                                <rect key="frame" x="417" y="38" width="103" height="30"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="SCHEDULED" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ghn-Bq-h3q" customClass="themeLabel" customModule="MyVagon" customModuleProvider="target">
                                         <rect key="frame" x="15" y="8" width="73" height="14.5"/>
@@ -147,10 +147,10 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="B0t-SC-wgj">
-                                <rect key="frame" x="10" y="249" width="436" height="40"/>
+                                <rect key="frame" x="10" y="249" width="500" height="40"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9qw-3j-77c">
-                                        <rect key="frame" x="0.0" y="0.0" width="436" height="40"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="500" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="yWJ-KF-xNR"/>
                                         </constraints>
@@ -162,6 +162,18 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MiL-ku-xrA">
+                                <rect key="frame" x="485" y="73" width="25" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="25" id="5mX-gB-nJH"/>
+                                    <constraint firstAttribute="height" constant="25" id="hQ0-0y-Yyl"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="trash.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="btnDeleteAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="crJ-E1-GeY"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
@@ -175,16 +187,18 @@
                             <constraint firstItem="RG8-I2-gPy" firstAttribute="top" secondItem="Qsx-Z0-Kxq" secondAttribute="bottom" constant="5" id="GhK-QY-09E"/>
                             <constraint firstItem="KJe-jU-uR7" firstAttribute="top" secondItem="RG8-I2-gPy" secondAttribute="bottom" constant="5" id="JQ1-ta-d1p"/>
                             <constraint firstItem="B0t-SC-wgj" firstAttribute="top" secondItem="63V-dw-Av4" secondAttribute="bottom" constant="5" id="K2G-YE-JiA"/>
-                            <constraint firstItem="63V-dw-Av4" firstAttribute="top" relation="greaterThanOrEqual" secondItem="KJe-jU-uR7" secondAttribute="bottom" constant="10" id="K4h-wi-CuM"/>
+                            <constraint firstItem="MiL-ku-xrA" firstAttribute="top" secondItem="KJe-jU-uR7" secondAttribute="bottom" id="MGc-5M-fYy"/>
                             <constraint firstItem="Qsx-Z0-Kxq" firstAttribute="height" secondItem="9CR-94-3B4" secondAttribute="height" multiplier="1.02439" id="OKx-fT-je5"/>
                             <constraint firstAttribute="trailing" secondItem="RG8-I2-gPy" secondAttribute="trailing" id="QeE-bS-Q7X"/>
                             <constraint firstItem="YrO-Rt-oan" firstAttribute="leading" secondItem="Qsx-Z0-Kxq" secondAttribute="leading" id="RKY-ov-g31"/>
                             <constraint firstItem="YrO-Rt-oan" firstAttribute="top" secondItem="xdy-Ne-XKR" secondAttribute="bottom" constant="5" id="SQA-fd-Vzp"/>
+                            <constraint firstItem="63V-dw-Av4" firstAttribute="top" relation="greaterThanOrEqual" secondItem="MiL-ku-xrA" secondAttribute="bottom" constant="10" id="UEr-Jd-l5d"/>
                             <constraint firstAttribute="bottom" secondItem="B0t-SC-wgj" secondAttribute="bottom" constant="10" id="W0T-HY-L8l"/>
                             <constraint firstItem="geb-z9-8gq" firstAttribute="trailing" secondItem="MvQ-lV-qn1" secondAttribute="trailing" id="Y6I-vZ-D6Y"/>
                             <constraint firstItem="xdy-Ne-XKR" firstAttribute="top" secondItem="Qsx-Z0-Kxq" secondAttribute="bottom" constant="5" id="bLl-S1-099"/>
                             <constraint firstItem="YrO-Rt-oan" firstAttribute="centerY" secondItem="MvQ-lV-qn1" secondAttribute="centerY" id="bek-2i-7Bj"/>
                             <constraint firstAttribute="trailing" secondItem="9CR-94-3B4" secondAttribute="trailing" constant="10" id="cBj-xz-deu"/>
+                            <constraint firstItem="MiL-ku-xrA" firstAttribute="trailing" secondItem="RG8-I2-gPy" secondAttribute="trailing" constant="-10" id="dHn-EG-2Gb"/>
                             <constraint firstItem="9CR-94-3B4" firstAttribute="leading" secondItem="Qsx-Z0-Kxq" secondAttribute="trailing" constant="10" id="dXZ-7F-Ot6"/>
                             <constraint firstItem="Qsx-Z0-Kxq" firstAttribute="top" secondItem="aBY-dw-Kxt" secondAttribute="top" constant="10" id="dcP-t3-pps"/>
                             <constraint firstItem="xdy-Ne-XKR" firstAttribute="leading" secondItem="aBY-dw-Kxt" secondAttribute="leading" constant="10" id="eRa-kX-9NY"/>
@@ -209,6 +223,7 @@
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="btnDelete" destination="MiL-ku-xrA" id="Sb2-0k-kSD"/>
                 <outlet property="btnMatches" destination="9qw-3j-77c" id="19v-9v-aqn"/>
                 <outlet property="lblAmount" destination="9CR-94-3B4" id="C2K-6t-y3V"/>
                 <outlet property="lblCompanyName" destination="Qsx-Z0-Kxq" id="awM-2r-w2S"/>
@@ -224,10 +239,11 @@
                 <outlet property="vWStatus" destination="RG8-I2-gPy" id="9EU-8z-qjz"/>
                 <outlet property="viewScheduleType" destination="xdy-Ne-XKR" id="zyN-LY-QBb"/>
             </connections>
-            <point key="canvasLocation" x="4372.5" y="55.625"/>
+            <point key="canvasLocation" x="4432.5" y="65.625"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="trash.fill" catalog="system" width="121" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
